fixed profile title & subtitle overflow

--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -3,6 +3,16 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
+    text-overflow: ellipsis;
+    max-width: 500px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+@media screen and (max-width: 900px) {
+    .profile__subtitle{
+        max-width: 40vw;
+    }
 }
 
 @media screen and (max-width: 700px) {
@@ -11,5 +21,6 @@
         font-size: 14px;
         line-height: 17px;
         text-align: center;
+        max-width: 65vw;
     }
 }
