--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -3,8 +3,17 @@
     font-weight: 500;
     font-size: 42px;
     line-height: 48px;
-    display: flex;
-    align-items: flex-end;
+    align-self: flex-end;
+    text-overflow: ellipsis;
+    max-width: 500px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+@media screen and (max-width: 900px) {
+    .profile__title{
+        max-width: 40vw;
+    }
 }
 
 @media screen and (max-width: 700px) {
@@ -13,5 +22,6 @@
     font-size: 27px;
     line-height: 33px;
     text-align: center;
+    max-width: 65vw;
     }
 }
